--- a/src/main/doc/simplelogging.texi
+++ b/src/main/doc/simplelogging.texi
@@ -63,13 +63,13 @@ the constants in @code{LoggerConstants.java}.
 
 To get started quickly using SimpleLogging, @pxref{Getting Started}.
 @ifhtml
-There is also a @uref{http://256stuff.com/sources/simplelogging/docs/simplelogging.pdf, PDF version of this documentation}.
+There is also a @uref{https://256stuff.com/sources/simplelogging/docs/simplelogging.pdf, PDF version of this documentation}.
 @end ifhtml
 @iftex
-There is also a @uref{http://256stuff.com/sources/simplelogging/docs/simplelogging.html, HTML version of this documentation}.
+There is also a @uref{https://256stuff.com/sources/simplelogging/docs/simplelogging.html, HTML version of this documentation}.
 @end iftex
 
-Gray Watson @uref{http://256stuff.com/gray/}
+Gray Watson @uref{https://256stuff.com/gray/}
 
 @menu
 * Getting Started::            Start using SimpleLogging quickly.
@@ -133,7 +133,7 @@ For more extensive instructions, @pxref{Using}.
 @cindex downloading the jars
 @cindex where to get new jars
 To get started with SimpleLogging, you will need to download the jar file.  The
-@uref{http://256stuff.com/sources/simplelogging/releases/, SimpleLogging release page} is the default repository but the
+@uref{https://256stuff.com/sources/simplelogging/releases/, SimpleLogging release page} is the default repository but the
 jars are also available from the @uref{https://repo1.maven.org/maven2/com/j256/simplelogging/simplelogging/, central
 maven repository}.
 
